# ml-notes

./: .gitignore
python/: .gitignore  pyproject.toml
python/ann/: image_classifier.py
python/ann/logs/run_2023_07_12-23_02_29/train/: events.out.tfevents.1689213750.MacBook-Pro-de-Harrison.local.41448.0.v2
python/ann/logs/run_2023_07_12-23_02_29/validation/: events.out.tfevents.1689213752.MacBook-Pro-de-Harrison.local.41448.1.v2
python/ann/logs/run_2023_07_12-23_13_24/train/: events.out.tfevents.1689214405.MacBook-Pro-de-Harrison.local.41800.0.v2
python/ann/logs/run_2023_07_12-23_13_24/validation/: events.out.tfevents.1689214406.MacBook-Pro-de-Harrison.local.41800.1.v2
python/ann/logs/run_2023_11_20-19_28_50/train/: events.out.tfevents.1700519330.MacBook-Pro-de-Harrison.local.72564.0.v2
python/cnn/: __init__.py
python/data-visualization/: area.py  bar.py  bubble.py  pareto.py  pie.py  scatter.py  violin.py
python/data_visualization/: boxplot.py  histogram.py  line.py  pareto.py  scatter.py  violin.py
python/eda/: titanic_eda.ipynb
python/hypothesis_testing/: bartlett_tests.py  chi_squared_tests.py  prop_tests.py  sample.py  shapiro_tests.py  t_tests.py
python/k_means/: k_means.py
python/modelling/: titanic.ipynb
python/pca/: incremental_pca.py  optimal_dimensions.py  pca.py
python/reinforcement_learning/: main.ipynb
python/rnn/: __init__.py
python/rnn/dataset/: __init__.py
python/tree_methods/: california_decision_tree.dot  decision_trees.py  random_forests.py
python/utils/: arrow_3d.py
r/: .gitignore
r/data_visualization/: ggdist.R  (+1 more)
(+14 files in other folders)
