[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["HarrisonHenri <harrisonhenrisn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
vega-datasets = "^0.9.0"
matplotlib-inline = "^0.1.6"
ipython = "^8.10.0"
nbformat = "^5.7.3"
plotly = "^5.13.0"
black = "^23.1.0"
scipy = {version = "^1.10.1", python = ">=3.9,<3.12"}
jupyter = "^1.0.0"
missingno = "^0.5.2"
scikit-learn = "^1.2.2"
catboost = "^1.1.1"
tensorflow = "^2.13.0"
Pillow = "^10.0.0"
numpy = "^1.25.2"
gym = {extras = ["classic-control"], version = "^0.26.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
